WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242738
Do not create backdrop renderer for elements that can't have generated content
https://bugs.webkit.org/show_bug.cgi?id=242738
Summary
Do not create backdrop renderer for elements that can't have generated content
Rob Buis
Reported
2022-07-14 00:58:36 PDT
Do not create backdrop renderer for elements that can't have generated content.
Attachments
Patch
(1.42 KB, patch)
2022-07-14 01:18 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2022-07-14 01:18:40 PDT
Created
attachment 460886
[details]
Patch
EWS
Comment 2
2022-07-14 06:06:15 PDT
Committed
252452@main
(89b58b58e372): <
https://commits.webkit.org/252452@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460886
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-07-14 06:07:16 PDT
<
rdar://problem/97010350
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug