Do not create backdrop renderer for elements that can't have generated content https://bugs.webkit.org/show_bug.cgi?id=242738

Reviewed by Alan Bujtas.

Do not create backdrop renderer for elements that can't have generated content.

* Source/WebCore/rendering/updating/RenderTreeUpdaterGeneratedContent.cpp:
(WebCore::RenderTreeUpdater::GeneratedContent::updateBackdropRenderer):

Canonical link: https://commits.webkit.org/252452@main